# inkwell

./: .dockerignore  .env.example  .gitignore  .mcp.json  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODOS.md  deny.toml  docker-compose.yml  eslint.config.js  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  renovate.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.config/: nextest.toml
.mex/: AGENTS.md  ROUTER.md  SETUP.md  config.json
.open-dynamic-workflow/: config.yaml
docs/: API.md  AUTHORING.md  BACKUP-RESTORE.md  CLOSEOUT.md  COMPATIBILITY.md  DEPLOYMENT.md  QA-MATRIX.md  QUICKSTART.md  RAILWAY.md  RELEASE-CHECKLIST.md  RELEASE-NOTES-v0.1.0.md  RELEASE-NOTES-v0.2.0.md  RELEASES.md  SITE-CONFIGURATION.md  STAGING.md  audit-v0.1.md  index.md  openapi.yaml
migrations/: 0001_create_documents.sql  0002_add_document_status.sql  0003_add_document_tags.sql  0004_add_documents_list_index.sql  0005_create_links.sql  0006_add_document_version.sql  0007_add_document_growth.sql  0008_add_documents_fts.sql  0009_create_note_chunks.sql  0010_create_webmentions.sql  0011_create_authors.sql  0012_create_author_tokens.sql  0013_add_documents_owner.sql  0014_create_write_audit.sql  0015_seed_bootstrap_admin.sql  0016_set_owner_id_default.sql  0017_owner_id_not_null.sql  0018_add_note_chunk_embedding_provenance.sql  0019_create_media.sql  0020_create_sessions.sql  0021_create_slug_aliases.sql  0022_create_preview_tokens.sql  0023_add_documents_tags_status_gin_index.sql  (+1 more)
src/: api.test.ts  (+22 more)
(+219 files in other folders)
