[package]
name    = "inkwell"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ammonia = "4"
anyhow = "1"
async-trait = "0.1.89"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive"] }
comrak = { version = "0.53", default-features = false }
dotenvy = "0.15"
form_urlencoded = "1"
futures-util = { version = "0.3", default-features = false }
governor = "0.10.4"
http = "1"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
rmcp = { version = "2.0", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
subtle = "2"
thiserror = "2"
time = { version = "0.3", features = [
  "formatting",
  "macros",
  "parsing",
  "serde",
] }
tokio = { version = "1", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "time",
] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unicode-normalization = "0.1"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies.sqlx]
version  = "0.9"
features = ["runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "time", "migrate"]

[dev-dependencies]
pretty_assertions = "1"
reqwest           = { version = "0.13.4", features = ["json"] }
